--- a/browny-v1.0/assets/css/style.css
+++ b/browny-v1.0/assets/css/style.css
@@ -370,18 +370,33 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
         6.  Skills
 --------------------------------------*/
 .skills {
-    
+   padding: 50px 0; 
 }
-.skill-content{padding: 50px 0 80px;}
+.skill-content{
+    padding: 50px 0 80px;
+    text-align: center;
+}
 .single-skill-content{
-    padding-top:50px;
+    text-align: center; 
+}
+.skills-wrapper {
+    gap: 20px;
+    justify-content:center;
 }
 .skill-section{
     background-color: #f9f9f9;
     border: 1px solid #ddd; /* Light gray border */
     border-radius: 8px; /* Rounded corners */
     padding: 20px; /* Padding inside the box */
-    margin: 20px 0; 
+    margin: 20px 0;
+    flex: 1 1 100%;
+    box-sizing: border-box;
+    max-width:100%;
+    
+}
+.section-heading{
+    text-align: center;
+    margin-bottom:50px;
 }
 .section-heading h2 {
     font-size: 20px;
@@ -390,9 +405,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     padding-bottom: 50px;
     border-bottom: 1px solid #e5ebf2;
 }
-.single-progress-txt {
-    display: flex;
-}
+
 .single-skill-content h2 {
     width: 10%;
     color: #a606c3;
@@ -403,7 +416,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     font-weight: bold;
     margin-bottom: 15px;
 }
-.single-skill-content h3 {
+.skill-section h3 {
     width: 10%;
     color: #a606c3;
     position: relative;
@@ -413,7 +426,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     font-weight: bold;
 }
 
-.single-skill-content ul {
+.skill-section ul {
     width: 10%;
     color: #3c4258;
     position: relative;
@@ -421,34 +434,25 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     left: 20px;
     font-size: 20px;
     list-style-type: disc;
+    text-align: left;
 }
-.single-skill-content li {
+.skill-section li {
     margin-bottom:10px;
     line-height:1.5;
     white-space: nowrap;
 }
 
-.tooltip{
-   position:relative;
-   float:right;
-}
-.tooltip > .tooltip-inner {
-   background-color: transparent;
-   padding: 1px 5px;
-   color: #b636ff;
-   font-weight: 500;
-   font-size: 12px;
-   border-radius: 0;
-}
-.popOver + .tooltip > .tooltip-arrow {
-   border-left: 6px solid transparent;
-   border-right: 6px solid transparent;
-   border-top: 6px solid #fff;
-   bottom: -1px;
-   transform: translateX(-50%);
-   margin-left: 0;
+@media (min-width: 600px){
+    .skill-section{
+        flex: 1 1 calc(50% - 20px);
+    }
 }
 
+@media (min-width: 900px){
+    .skill-section{
+        flex: 1 1 calc(33.33% - 20px);
+    }
+}
 /*-------------------------------------
         7. Experience
 -------------------------------------*/
@@ -456,7 +460,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     padding: 50px 0 100px;
     border-top: 1px solid #e5ebf2;
 }
-.experience-content {padding-top: 100px;}
+.experience-content {padding-top: 50px;}
 .single-timeline-box {margin-bottom: 75px;}
 
 /*experience-time*/
@@ -465,12 +469,12 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 .experience-time h2 {
     font-weight: 400;
+    margin-bottom: 5px;
 }
 .experience-time h3 {
     font-size: 16px;
     font-weight: 300;
     color: #636a82;
-    margin-top: 14px;
     text-transform: uppercase;
 }
 /*experience-time*/
@@ -497,7 +501,8 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     color: #d92cf9;
     position: absolute;
     font-size: 10px;
-    left: -14.5%;
+    left: -14%;
+    top: 0;
     z-index: 1;
 }
 .timeline-content h4.title {
@@ -509,7 +514,7 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
     color: #636a82;
     font-size: 14px;
     font-weight: 300;
-    margin: 18px 0 20px;
+    margin: 10px 0;
 }
 .main-timeline .description {
     font-size: 14px;
@@ -530,83 +535,9 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }
 
 .experience-time-responsive{display: none;}
+ 
 /*-------------------------------------
-        8. Profiles
---------------------------------------*/
-.profiles {
-    padding:  50px 0 100px;
-    border:  1px solid #e5ebf2;
-}
-
-.profiles-content {padding-top: 100px;}
-.profiles-content .col-sm-3{padding:0;}
-.profile-txt {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.single-profile {
-    position: relative;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: 1px solid #b2c1ce;
-    overflow:hidden;
-    -webkit-transition:background 0.5s linear; 
-    -moz-transition:background 0.5s linear; 
-    -ms-transition:background 0.5s linear; 
-    -o-transition:background 0.5s linear; 
-    transition:background 0.5s linear;
-}
-.profile-icon-name {
-    text-transform: capitalize;
-    color: #636a82;
-    font-size: 16px;
-}
-.single-profile.profile-no-border{border-right:transparent;}
-.profile-border {
-    border-bottom: 1px solid #b2c1ce;
-}
-.single-profile-overlay{
-    display:flex;
-    align-items:center;
-    text-transform: capitalize;
-    justify-content:center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    content: " ";
-    width:100%;
-    height: 100%;
-    background: #d92cf9;
-    background: -moz-linear-gradient(left, #d92cf9 0%, #b636ff 100%);
-    background: -webkit-linear-gradient(left, #d92cf9 0%,#b636ff 100%);
-    background: linear-gradient(to right, #d92cf9 0%,#b636ff 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92cf9', endColorstr='#b636ff',GradientType=1 );
-    -webkit-transform:scale(0);
-    -moz-transform:scale(0);
-    -ms-transform:scale(0);
-    -o-transform:scale(0);
-    transform:scale(0);
-    -webkit-transition: .5s;
-    -moz-transition: .5s;
-    -ms-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
-}
-.single-profile:hover .single-profile-overlay{
-    -webkit-transform:scale(1);
-    -moz-transform:scale(1);
-    -ms-transform:scale(1);
-    -o-transform:scale(1);
-    transform:scale(1);
-    top:0;
-}
-.single-profile:hover .profile-icon-name,.single-profile:hover .profile-txt a>i{color: #fff;}
-.single-profile:hover .profile-border {border:transparent;}
-/*-------------------------------------
-        9. Portfolio
+        8. Portfolio
 --------------------------------------*/
 .projects {
     padding:  50px 0 100px;
@@ -682,25 +613,46 @@ span.single-timeline-horizontal.spacial-horizontal-line {width: 88px;}
 }/*.isotope-overlay*/
 
 /*-------------------------------------
-        10. Clients
+        9. Certifications
 --------------------------------------*/
-.certs {padding-top: 50px;}
-.clients-area {
+.certs {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.certifications-area {
     display: flex;
     align-items: center;
-    height: 250px;
 }
-.clients-area .item {padding: 0 25px;}
+.certifications-area .item {padding: 0 25px;}
 
-.certs .clients-area .owl-carousel .owl-item img {
+.certs .certifications-area .owl-carousel .owl-item img {
     display: block;
     width: 100%;
     height: auto;
     border-radius:0;
 }
 
+.certifications-area .item h3 {
+    font-size: 18px;
+    font-weight: bold;
+    margin: 10px 0;
+}
+.certifications-area .item p {
+    font-size: 14px;
+    color: #636a82;
+    margin: 0;
+}
+
+.owl-nav 
+{
+    text-align: center;
+    margin-top: 20px;
+}
+  
+
+
 /*-------------------------------------
-        11. Contact
+        10. Contact
 --------------------------------------*/
 .contact {
     background: #f9fbfd;
